log
Thu 11 May 2023 04:10:06 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
559fa05
Thu 11 May 2023 04:11:12 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:34:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   34 |   return (*(pq->heapArray)).data;
      |          ~~~~~~~~~~~~~~~~~~^~~~~
heap.c:32:6: note: declared here
   32 | void heap_pop(Heap* pq){
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
91f8521
Thu 11 May 2023 04:11:28 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
bb3876c
Thu 11 May 2023 04:12:39 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
76f6c29
Thu 11 May 2023 04:13:13 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:7: error: ‘qp’ undeclared (first use in this function); did you mean ‘pq’?
   23 |   if(!qp->size) return NULL;
      |       ^~
      |       pq
heap.c:23:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
45461f0
Thu 11 May 2023 04:13:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
baad8a8
Thu 11 May 2023 04:24:55 PM UTC: 
 heap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
e9a23c5
Thu 11 May 2023 04:25:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
d3a0cd2
Thu 11 May 2023 04:29:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
46908b8
Thu 11 May 2023 04:29:27 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
5124ed8
Thu 11 May 2023 04:29:50 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
e5f310e
Thu 11 May 2023 04:29:59 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
9e51252
Thu 11 May 2023 04:30:58 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
baea797
Thu 11 May 2023 04:31:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
c67ea5f
